Category module added

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -48,7 +48,7 @@
             </div>
         </nav>
         <div class="container">
-            <?php echo $this->navigation('navigation')->breadcrumbs()->setMinDepth(0); ?>
+            <?php echo $this->navigation('navigation')->breadcrumbs()->setMinDepth(0)->setPartial('partial/breadcrumb.phtml'); ?>
             <?php echo $this->content; ?>
             <hr>
             <footer>
