--- a/module/Product/view/product/product/index.phtml
+++ b/module/Product/view/product/product/index.phtml
@@ -1,6 +1,6 @@
 <?php // module/Album/view/album/album/index.phtml:
 $i = 0;
-$title = 'Products';
+$title = 'Productos';
 $this -> headTitle($title);
 ?>
 <h1><?= $this -> escapeHtml($title); ?></h1>
