--- a/module/Product/view/product/product/delete.phtml
+++ b/module/Product/view/product/product/delete.phtml
@@ -10,7 +10,7 @@ $url = $this->url('product', array('action' => 'delete','id'     => $this->id,))
 <form action="<?php echo $url; ?>" method="post">
 <div>
     <input type="hidden" name="id" value="<?php echo (int) $product->id; ?>" />
-    <button type="submit" name="del" value="0">Cancelar</button>
-    <button type="submit" name="del" value="1">Eliminar</button>
+    <button type="submit" name="del" value="0" class="btn btn-success">Cancelar</button>
+    <button type="submit" name="del" value="1" class="btn btn-danger">Eliminar</button>
 </div>
 </form>
